--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
@@ -28,5 +28,10 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+
+  "engines": {
+    "node": "14.18.1"
   }
+
 }
