--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 SESS_SECRET = 'super session secret'
+MONGO_URI="mongodb+srv://ryan1990:<password>@ironhack-project2.xovqqci.mongodb.net/?retryWrites=true&w=majority"
