--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 SESS_SECRET = 'super session secret'
+MONGOURL="mongodb+srv://ryan1990:RADECs53@ironhack-project2.xovqqci.mongodb.net/?retryWrites=true&w=majority"
