--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 SESS_SECRET = 'super session secret'
+MONGO_URL="mongodb+srv://ryanessel:RADECs53@game-app-db.kucyarf.mongodb.net/?retryWrites=true&w=majority"
